src/assets/app.scss
@import "vars.scss";
@import "node_modules/bootstrap/scss/bootstrap";

#app {
    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
}

h1 {
    font-size: 31px;
    height: 38px;
}

h2 {
    font-size: 26px;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-thumb {
    background: #CCC;
    border-radius: 20px;
}

.modal {
    backdrop-filter: blur(3px);
}

.modal-content {
    border-radius: 1rem;
    box-shadow: 0 15px 70px rgba(0, 0, 0, .1);

    .dark & {
        box-shadow: 0 15px 70px rgb(0 0 0);
        background-color: $dark-bg;
    }
}

.VuePagination__count {
    font-size: 13px;
    text-align: center;
}


.shadow-box {
    //overflow: hidden;   // Forget why add this, but multiple select hide by this
    box-shadow: 0 15px 70px rgba(0, 0, 0, .1);
    padding: 10px;
    border-radius: 10px;

    &.big-padding {
        padding: 20px;
    }
}

.btn {
    padding-left: 20px;
    padding-right: 20px;
}

.btn-primary {
    color: white;

    &:hover, &:active, &:focus, &.active {
        color: white;
        background-color: $highlight;
        border-color: $highlight;
    }

    .dark & {
        color: $dark-font-color2;
    }
}



// Dark Theme override here
.dark {
    background-color: #090C10;
    color: $dark-font-color;

    &::-webkit-scrollbar-thumb {
        background: $dark-border-color;
    }

    .shadow-box {
        background-color: $dark-bg;
    }

    .form-check-input {
        background-color: $dark-bg2;
    }

    .form-switch .form-check-input {
        background-color: #131a21;
    }

    a,
    .table,
    .nav-link {
        color: $dark-font-color;
    }

    .form-control,
    .form-control:focus,
    .form-select,
    .form-select:focus {
        color: $dark-font-color;
        background-color: $dark-bg2;
    }

    .form-control, .form-select {
        border-color: $dark-border-color;
    }

    .table-hover > tbody > tr:hover {
        --bs-table-accent-bg: #070A10;
        color: $dark-font-color;
    }

    .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
        color: $dark-font-color2;
    }

    .bg-primary {
        color: $dark-font-color2;
    }

    .btn-secondary {
        color: white;
    }

    .btn-close {
        opacity: 1;
    }

    .modal-header {
        border-color: $dark-bg;
    }

    .modal-footer {
        border-color: $dark-bg;
    }

    // Pagination
    .page-item.disabled .page-link {
        background-color: $dark-bg;
        border-color: $dark-border-color;
    }

    .page-link {
        background-color: $dark-bg;
        border-color: $dark-border-color;
        color: $dark-font-color;
    }

    // Multiselect
    .multiselect__tags {
        background-color: $dark-bg2;
        border-color: $dark-border-color;
    }

    .multiselect__input, .multiselect__single {
        background-color: $dark-bg2;
        color: $dark-font-color;
    }

    .multiselect__content-wrapper {
        background-color: $dark-bg2;
        border-color: $dark-border-color;
    }

    .multiselect--above .multiselect__content-wrapper {
        border-color: $dark-border-color;
    }

    .multiselect__option--selected {
        background-color: $dark-bg;
    }
}

